# pico-bmi160

./: CMakeLists.txt  README.md  bmi160_i2c.c
bmi160/: CMakeLists.txt  bmi160.c
